<resources>
    <string name="app_name">StarHero</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="back">BACK</string>
    <string name="todo">TODO</string>
    <!-- SETTINGS -->
    <string name="menu_settings">Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="desc_vibrate">Vibrate when new character joins</string>
    <string name="desc_music">Turn on background music</string>
    <string name="desc_sound">Volume of sound effects</string>
    <string name="new_game">Restart - New Game</string>
    <string name="go"><![CDATA[>]]></string>
    <!-- HOME -->
    <string name="menu_home">Home</string>
    <string name="menu_select">Select</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_sector">Sector</string>
    <string name="text_home">Touch the screen</string>
    <string name="head">Select Hero</string>
    <!-- DETAIL -->
    <string name="size">Size: %1$s</string>
    <string name="skill">Skill: %1$s</string>
    <string name="strength">STRENGTH</string>
    <string name="defense">DEFENSE</string>
    <string name="health">HEALTH</string>
    <string name="speed">SPEED</string>
    <string name="power">POWER</string>
    <string name="weapon">WEAPON</string>
    <string name="ship_detail">SHIP: %1$s</string>
    <string name="weapon_detail">%1$s\n%2$s</string>
    <string name="check">Check</string>
    <string name="cancel">Cancel</string>

    <!-- POWER -->
    <string name="head_start_skill">Select your Skill</string>
    <string name="head_select_power">Select Power</string>
    <string name="selected_power">Power (%1$d/%2$d)</string>
    <string name="toast_already_power">%1$s already selected</string>
    <string name="no_powers">This hero has no powers</string>
    <string name="head_star_fragment">Sector Virgo</string>


</resources>