<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_select"
            android:icon="@drawable/ic_menu_select"
            android:title="@string/menu_select" />
        <item
            android:id="@+id/nav_detail"
            android:icon="@drawable/ic_menu_detail"
            android:title="@string/menu_detail" />
        <item
            android:id="@+id/nav_character"
            android:icon="@drawable/ic_menu_detail"
            android:title="@string/menu_character" />
        <item
            android:id="@+id/nav_sector"
            android:icon="@drawable/ic_menu_sector"
            android:title="@string/menu_sector" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_detail"
            android:title="@string/menu_settings" />
    </group>
</menu>